# bim-quality-checker

./: README.md  pyproject.toml
.github/workflows/: bim-quality-gate.yml  ci.yml
examples/: demo.ipynb
src/bim_quality_checker/: __init__.py  ci.py  cli.py  deviation_map.py  element_checker.py  loader.py  metrics.py  report.py
src/bim_quality_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_ci.py  test_cli.py  test_deviation_map.py  test_element_checker.py  test_loader.py  test_metrics.py  test_report.py
